--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
           <a href="#">About</a>
         </nav>
     </header>
-    <section id="list" data-bind="foreach: podcasts">
+    <section id="list" data-bind="foreach: shownpodcasts">
       <article>
          <h1><a data-bind="text: title"></a></h1>
          <time data-bind="text: date"></time>
          <div class="player">
-           <a class="play"></a>
+           <!-- TODO - Add play back... -->
            <a class="download" data-bind="attr: { href: audio }"></a>
-           <a class="popup"></a>
+           <a class="popup" data-bind="click: toggleVideo"></a>
          </div>
-         <section data-bind="html: shownotes"></section>
+         <div data-bind="if: expandedVideo">
+            <iframe data-bind="attr: { src: embedUrl, title: title }" width="480" height="390" frameborder="0"></iframe>
+         </div>
+         <div class="shownotes" data-bind="html: shownotes"></div>
        </article>
     </section>
     <footer>
