Tweaks for tracking and subscribing to the rss feed.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="google-site-verification" content="CmoBP09sh08XNdK242Ix6zlmrAtul7gwKz4xGtrRqxA" />
     <title>The Scalawags - Monthly podcasts about Scala language.</title>
     <meta name="description" content="Monthly podcasts about Scala language">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="main.css">
+    <link href="http://thescalawags.libsyn.com/rss" rel="alternate" type="application/rss+xml" title="Scalawags Podcast" />
   </head>
   <body>
     <header>
@@ -39,5 +41,19 @@
     <script src="knockout-2.2.1.js"></script>
     <script src="feeds.js"></script>
     <script src="main.js"></script>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-37811817-1']);
+  _gaq.push(['_setDomainName', 'scalawags.tv']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
   </body>
 </html>
