--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="google-site-verification" content="CmoBP09sh08XNdK242Ix6zlmrAtul7gwKz4xGtrRqxA" />
     <title>The Scalawags - Monthly podcasts about Scala language.</title>
     <meta name="description" content="Monthly podcasts about Scala language">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; user-scalable=no;"/>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700|Open+Sans+Condensed:700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="main.css">
     <link href="http://thescalawags.libsyn.com/rss" rel="alternate" type="application/rss+xml" title="Scalawags Podcast" />
